# shovel-sweeper

./: CMakeLists.txt  Makefile  README.md
include/: mines.h
src/: main.cpp  mines.cpp
